; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_rack-meter.c_rackmeter_setup_i2s.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_rack-meter.c_rackmeter_setup_i2s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rackmeter = type { i64, i32*, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.macio_chip* }
%struct.macio_chip = type { i32 }

@PMAC_FTR_WRITE_GPIO = common dso_local global i32 0, align 4
@RACKMETER_MAGIC_GPIO = common dso_local global i32 0, align 4
@PMAC_FTR_SOUND_CHIP_ENABLE = common dso_local global i32 0, align 4
@KEYLARGO_FCR1 = common dso_local global i32 0, align 4
@KL1_I2S0_ENABLE = common dso_local global i32 0, align 4
@KL1_I2S0_CLK_ENABLE_BIT = common dso_local global i32 0, align 4
@KL1_I2S0_CELL_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rackmeter*)* @rackmeter_setup_i2s to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rackmeter_setup_i2s(%struct.rackmeter* %0) #0 {
  %2 = alloca %struct.rackmeter*, align 8
  %3 = alloca %struct.macio_chip*, align 8
  store %struct.rackmeter* %0, %struct.rackmeter** %2, align 8
  %4 = load %struct.rackmeter*, %struct.rackmeter** %2, align 8
  %5 = getelementptr inbounds %struct.rackmeter, %struct.rackmeter* %4, i32 0, i32 2
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.macio_chip*, %struct.macio_chip** %9, align 8
  store %struct.macio_chip* %10, %struct.macio_chip** %3, align 8
  %11 = load i32, i32* @PMAC_FTR_WRITE_GPIO, align 4
  %12 = load i32, i32* @RACKMETER_MAGIC_GPIO, align 4
  %13 = call i32 @pmac_call_feature(i32 %11, i32* null, i32 %12, i32 5)
  %14 = load i32, i32* @PMAC_FTR_SOUND_CHIP_ENABLE, align 4
  %15 = load %struct.rackmeter*, %struct.rackmeter** %2, align 8
  %16 = getelementptr inbounds %struct.rackmeter, %struct.rackmeter* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @pmac_call_feature(i32 %14, i32* %17, i32 0, i32 1)
  %19 = load i32, i32* @KEYLARGO_FCR1, align 4
  %20 = load i32, i32* @KL1_I2S0_ENABLE, align 4
  %21 = call i32 @MACIO_BIS(i32 %19, i32 %20)
  %22 = load i32, i32* @KEYLARGO_FCR1, align 4
  %23 = load i32, i32* @KL1_I2S0_CLK_ENABLE_BIT, align 4
  %24 = call i32 @MACIO_BIC(i32 %22, i32 %23)
  %25 = load i32, i32* @KEYLARGO_FCR1, align 4
  %26 = call i32 @MACIO_IN32(i32 %25)
  %27 = call i32 @udelay(i32 10)
  %28 = load %struct.rackmeter*, %struct.rackmeter** %2, align 8
  %29 = getelementptr inbounds %struct.rackmeter, %struct.rackmeter* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %30, 16
  %32 = call i32 @out_le32(i64 %31, i32 33161216)
  %33 = load %struct.rackmeter*, %struct.rackmeter** %2, align 8
  %34 = getelementptr inbounds %struct.rackmeter, %struct.rackmeter* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = add nsw i64 %35, 16
  %37 = call i32 @in_le32(i64 %36)
  %38 = call i32 @udelay(i32 10)
  %39 = load i32, i32* @KEYLARGO_FCR1, align 4
  %40 = load i32, i32* @KL1_I2S0_CELL_ENABLE, align 4
  %41 = load i32, i32* @KL1_I2S0_CLK_ENABLE_BIT, align 4
  %42 = or i32 %40, %41
  %43 = call i32 @MACIO_BIS(i32 %39, i32 %42)
  %44 = load i32, i32* @KEYLARGO_FCR1, align 4
  %45 = call i32 @MACIO_IN32(i32 %44)
  %46 = call i32 @udelay(i32 10)
  ret void
}

declare dso_local i32 @pmac_call_feature(i32, i32*, i32, i32) #1

declare dso_local i32 @MACIO_BIS(i32, i32) #1

declare dso_local i32 @MACIO_BIC(i32, i32) #1

declare dso_local i32 @MACIO_IN32(i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @out_le32(i64, i32) #1

declare dso_local i32 @in_le32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
